@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="2.9.0" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="2.9.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -15,6 +15,7 @@
 - Net module taken from ResolveURL and adapted
 - Deprecate request function
 - Remove caching from library itself
+- Update user agent strings
 
 [B]2.8.X[/B]
 - Replaced xbmc.python import with xbmc.addon for Matrix compatibility
